test/good/t0094.ls

let hybrid f () = () where
  automaton
  | S0 -> do done
  | S1 -> local t in do der t = 1.0 init 0.0 done

